upload project summary

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-blah
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Senior design</title>
+</head>
+<body>
+	<a href="ProjectSummary.pdf">Project Summary</a>
+</body>
+</html>
