--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>Senior design</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<h1>Microfluidic Discs</h1>
+	<h1>ECE4012L6A</h1>
 	<a href="ProjectSummary.pdf">Project Summary</a>
+	<h1>Technical Review Papers</h1>
+	<a href="JaredLow.pdf">Jared Low</a>
 </body>
 </html>
